shiro 导航栏更新

--- a/src/main/resources/templates/MySoftwareCopyright.html
+++ b/src/main/resources/templates/MySoftwareCopyright.html
@@ -40,9 +40,9 @@
                                 <li><a class="J_menuItem black" th:href="@{/index}" shiro:hasAnyRoles ="student,teacher,Administration">Home</a></li>
                                 <li><a class="J_menuItem" th:href="@{/MyThesis}" shiro:hasAnyRoles="teacher,Administration">My Thesis</a></li>
                                 <li><a class="J_menuItem" th:href="@{/MySoftwareCopyright}" shiro:hasAnyRoles="teacher,Administration">My Software Copyright</a></li>
-                                <li><a class="J_menuItem" th:href="@{/subjectManagement}" shiro:hasAnyRoles="teacher,Administration">My Project</a></li>
+                                <li><a class="J_menuItem" th:href="@{/projectManagement}" shiro:hasAnyRoles="teacher,Administration">My Project</a></li>
                                 <li><a class="J_menuItem" th:href="@{/userManagement}" shiro:hasRole="Administration">Management</a></li>
-                                <li><a class="J_menuItem" th:href="@{/}" shiro:hasRole="Administration">Report Statistics</a></li>
+                                <li><a class="J_menuItem" th:href="@{/test}" shiro:hasRole="Administration">Report Statistics</a></li>
                                 <li><a class="J_menuItem" th:text="${session.user.getUserName()}">谢文仲</a></li>
                                 <li><a class="J_menuItem" th:href="@{logout}">退出</a></li>
              
