statics页面高度设置变大

--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -53,7 +53,7 @@
     <!-- #7266ba -->
 
 </head>
-<body>
+<body style="height: 1500px;">
 
 <header  class="smaller">
     <div class="row">
@@ -78,7 +78,7 @@
     </div>
 
 </header>
-<div style="margin-top: 70px">
+<div style="margin-top: 70px;">
     <form action="/search" method="post">
     <div style="display: flex;margin-bottom: 20px;width:400px;margin-right: auto">
 
@@ -115,7 +115,7 @@
 
 </div>
 
-<div id="container" style="min-width: 310px; height: 400px; margin: 0 auto;margin-bottom: 20px"></div>
+<div id="container" style="min-width: 310px; height: 600px; margin: 0 auto;margin-bottom: 20px"></div>
 <div style="background-color:white">
     <p style="margin-top: 20px">数据表格</p>
     <table id="datatable" style="float:left;  width: 400px;">
